recipe select has a bunch of buttons

--- a/recipe_select.html
+++ b/recipe_select.html
@@ -1,5 +1,19 @@
-<a href= "recipes/alfredo/chop.html"> alfredo </a>
+<button>
+    <a href= "recipes/alfredo/chop.html"> alfredo </a>
+</button>
+
+<button>
 <a href= "recipes/cheese/chop.html"> cheese </a>
+</button>
+
+<button>
 <a href= "recipes/squid/chop.html"> squid </a>
+</button>
+
+<button>
 <a href= "recipes/beef/chop.html"> beef </a>
+</button>
+
+<button>
 <a href= "recipes/pancakes/chop.html"> pancakes </a>
+</button>
