started pancake home page

--- a/recipe_select.html
+++ b/recipe_select.html
@@ -1,19 +1,19 @@
 <button>
-    <a href= "recipes/alfredo/chop.html"> alfredo </a>
+    <a href= "recipes/alfredo/home.html"> alfredo </a>
 </button>
 
 <button>
-<a href= "recipes/cheese/chop.html"> cheese </a>
+<a href= "recipes/cheese/home.html"> cheese </a>
 </button>
 
 <button>
-<a href= "recipes/squid/chop.html"> squid </a>
+<a href= "recipes/squid/home.html"> squid </a>
 </button>
 
 <button>
-<a href= "recipes/beef/chop.html"> beef </a>
+<a href= "recipes/beef/home.html"> beef </a>
 </button>
 
 <button>
-<a href= "recipes/pancakes/chop.html"> pancakes </a>
+<a href= "recipes/pancakes/home.html"> pancakes </a>
 </button>
