--- a/recipes/pancakes/home.html
+++ b/recipes/pancakes/home.html
@@ -8,17 +8,28 @@
             border: 1px solid #F4BFBF; padding: 5px;
         }
         tr {
-            background-color: #FAF0D7; color: #8CC0DE;
+            background-color: #FAF0D7; color: black;
+        }
+        .block {
+          width: 25%;
+          border-radius: 25px;
+          background-color: #F4BFBF;
+          /* box-shadow: 5px 5px 5px lightblue; */
+          margin: 20px;
+          padding: 14px 28px;
+          font-size: 25px;
+          cursor: pointer;
+          text-align: center;
         }
     </style>
 </head>
 
 <body>
-<button>
+<button class = "block">
     <a href = "chop.html"> Start Cooking! </a>
 </button>
-<h2> Highscores: </h2>
-<table>
+<h2 align="right"> Highscores: </h2>
+<table align = "right">
     <tr>
         <td> 1. NAME
         </td>
@@ -53,27 +64,65 @@
         </td>
     </tr>
     <tr>
-        <td> 1. Ingredient 1
+        <td> 1. 1 cup all-purpose flour, (spooned and leveled)
         </td>
-        <td> 1. Instruction 1
-        </td>
-    </tr>
-    <tr>
-        <td> 2. Ingredient 2
-        </td>
-        <td> 2. Instruction 2
+        <td> 1. In a small bowl, whisk together flour, sugar, baking powder, and salt; set aside.
         </td>
     </tr>
     <tr>
-        <<td> 3. Ingredient 3
+        <td> 2. 2 tablespoons sugar
         </td>
-        <td> 3. Instruction 3
+        <td> 2. In a medium bowl, whisk together milk, butter (or oil), and egg.
         </td>
     </tr>
     <tr>
-        <td> 3. Ingredient 3
+        <<td> 3. 2 teaspoons baking powder
         </td>
-        <td> 3. Instruction 3
+        <td> 3. Add dry ingredients to milk mixture; whisk until just moistened (do not overmix; a few small lumps are fine).
+        </td>
+    </tr>
+    <tr>
+        <td> 3. ½ teaspoon salt
+        </td>
+        <td> 3. Heat a large skillet (nonstick or cast-iron) or griddle over medium. Add ½ tsp of butter.
+        </td>
+    </tr>
+    <tr>
+        <td> 4. 1 cup milk
+        </td>
+        <td> 4. For each pancake, spoon 2 to 3 tablespoons of batter onto skillet, using the back of the spoon to spread batter into a round.
+        </td>
+    </tr>
+    <tr>
+        <td> 5. 2 tablespoons unsalted butter, melted, or vegetable oil
+        </td>
+        <td> 5. Cook until surface of pancakes have some bubbles and a few have burst, 1 to 2 minutes. Flip carefully with a thin spatula, and cook until browned on the underside, 1 to 2 minutes more.
+        </td>
+    </tr>
+    <tr>
+        <td> 6. 1 large egg
+        </td>
+        <td> 6. Serve warm with maple syrup, strawberry and banana toppings.
+        </td>
+    </tr>
+    <tr>
+        <td> 7. 1 tsp vanilla essence
+        </td>
+        <td> Note: You can also add other assorted toppings, such as butter, confectioners sugar, honey, jams, preserves, sweetened whipped cream, or chocolate syrup
+
+        </td>
+    </tr>
+    <tr>
+        <td> 8. 1 tablespoon vegetable oil
+        </td>
+
+    </tr>
+    <tr>
+        <td> 9. 1 cup sliced bananas and strawberries
+        </td>
+    </tr>
+    <tr>
+        <td> 10. 1 cup maple syrup
         </td>
     </tr>
 </table>
