finished fried calamari and pancake home pages

--- a/recipes/pancakes/home.html
+++ b/recipes/pancakes/home.html
@@ -1,131 +1,116 @@
+<!DOCTYPE html>
 <html>
 <head>
-    <style>
-        body {
-            background-color: #8CC0DE;
-        }
-        td {
-            border: 1px solid #F4BFBF; padding: 5px;
-        }
-        tr {
-            background-color: #FAF0D7; color: black;
-        }
-        .block {
-          width: 25%;
-          border-radius: 25px;
-          background-color: #F4BFBF;
-          /* box-shadow: 5px 5px 5px lightblue; */
-          margin: 20px;
-          padding: 14px 28px;
-          font-size: 25px;
-          cursor: pointer;
-          text-align: center;
-        }
-    </style>
+  <style>
+    body {
+      background-color: #8CC0DE;
+    }
+
+    td {
+      border: 1px solid #F4BFBF;
+      padding: 5px;
+    }
+
+    tr {
+      background-color: #FAF0D7;
+      color: black;
+    }
+
+    .block {
+      width: 25%;
+      border-radius: 25px;
+      background-color: #F4BFBF;
+      /* box-shadow: 5px 5px 5px lightblue; */
+      margin: 20px;
+      padding: 14px 28px;
+      font-size: 25px;
+      cursor: pointer;
+      text-align: center;
+    }
+
+    .highscores {
+      float: right;
+      margin-right: 20px;
+    }
+  </style>
 </head>
 
 <body>
-<button class = "block">
-    <a href = "chop.html"> Start Cooking! </a>
-</button>
-<h2 align="right"> Highscores: </h2>
-<table align = "right">
-    <tr>
-        <td> 1. NAME
-        </td>
-    </tr>
-    <tr>
-        <td> 2. NAME
-        </td>
-    </tr>
-    <tr>
-        <td> 3. NAME
-        </td>
-    </tr>
-    <tr>
-        <td> 4. NAME
-        </td>
-    </tr>
-    <tr>
-        <td> 5. NAME
-        </td>
-    </tr>
-</table>
+    <a href="chop.html">
+        <button class="block">
+            Start Cooking!
+        </button>
+    </a>
 
-<h3>
-    Pancake Recipe
-</h3>
-<table>
-    <tr>
-        <td> <strong>Ingredents</strong>
-        </td>
-        <td>
-            <strong>Instructions</strong>
-        </td>
-    </tr>
-    <tr>
-        <td> 1. 1 cup all-purpose flour, (spooned and leveled)
-        </td>
-        <td> 1. In a small bowl, whisk together flour, sugar, baking powder, and salt; set aside.
-        </td>
-    </tr>
-    <tr>
-        <td> 2. 2 tablespoons sugar
-        </td>
-        <td> 2. In a medium bowl, whisk together milk, butter (or oil), and egg.
-        </td>
-    </tr>
-    <tr>
-        <<td> 3. 2 teaspoons baking powder
-        </td>
-        <td> 3. Add dry ingredients to milk mixture; whisk until just moistened (do not overmix; a few small lumps are fine).
-        </td>
-    </tr>
-    <tr>
-        <td> 3. ½ teaspoon salt
-        </td>
-        <td> 3. Heat a large skillet (nonstick or cast-iron) or griddle over medium. Add ½ tsp of butter.
-        </td>
-    </tr>
-    <tr>
-        <td> 4. 1 cup milk
-        </td>
-        <td> 4. For each pancake, spoon 2 to 3 tablespoons of batter onto skillet, using the back of the spoon to spread batter into a round.
-        </td>
-    </tr>
-    <tr>
-        <td> 5. 2 tablespoons unsalted butter, melted, or vegetable oil
-        </td>
-        <td> 5. Cook until surface of pancakes have some bubbles and a few have burst, 1 to 2 minutes. Flip carefully with a thin spatula, and cook until browned on the underside, 1 to 2 minutes more.
-        </td>
-    </tr>
-    <tr>
-        <td> 6. 1 large egg
-        </td>
-        <td> 6. Serve warm with maple syrup, strawberry and banana toppings.
-        </td>
-    </tr>
-    <tr>
-        <td> 7. 1 tsp vanilla essence
-        </td>
-        <td> Note: You can also add other assorted toppings, such as butter, confectioners sugar, honey, jams, preserves, sweetened whipped cream, or chocolate syrup
+  <div class="highscores">
+    <h2 align="right"> Highscores: </h2>
+    <table>
+      <tr>
+        <td>1. NAME</td>
+      </tr>
+      <tr>
+        <td>2. NAME</td>
+      </tr>
+      <tr>
+        <td>3. NAME</td>
+      </tr>
+      <tr>
+        <td>4. NAME</td>
+      </tr>
+      <tr>
+        <td>5. NAME</td>
+      </tr>
+    </table>
+  </div>
 
-        </td>
+  <h2 align="center">Pancake Recipe</h2>
+  <table align="center">
+    <tr>
+      <td><strong>Ingredients</strong></td>
+      <td><strong>Instructions</strong></td>
     </tr>
     <tr>
-        <td> 8. 1 tablespoon vegetable oil
-        </td>
-
+      <td> - 1 cup all-purpose flour, (spooned and leveled)</td>
+      <td>1. In a small bowl, whisk together flour, sugar, baking powder, and salt; set aside.</td>
     </tr>
     <tr>
-        <td> 9. 1 cup sliced bananas and strawberries
-        </td>
+      <td> - 2 tablespoons sugar</td>
+      <td>2. In a medium bowl, whisk together milk, butter (or oil), and egg.</td>
     </tr>
     <tr>
-        <td> 10. 1 cup maple syrup
-        </td>
+      <td> - 2 teaspoons baking powder</td>
+      <td>3. Add dry ingredients to milk mixture; whisk until just moistened (do not overmix; a few small lumps are fine).</td>
     </tr>
-</table>
+    <tr>
+      <td> - ½ teaspoon salt</td>
+      <td>4. Heat a large skillet (nonstick or cast-iron) or griddle over medium. Add ½ tsp of butter.</td>
+    </tr>
+    <tr>
+      <td> - 1 cup milk</td>
+      <td>5. For each pancake, spoon 2 to 3 tablespoons of batter onto skillet, using the back of the spoon to spread batter into a round.</td>
+    </tr>
+    <tr>
+      <td> - 2 tablespoons unsalted butter, melted, or vegetable oil</td>
+      <td>6. Cook until surface of pancakes have some bubbles and a few have burst, 1 to 2 minutes. Flip carefully with a thin spatula, and cook until browned on the underside, 1 to 2 minutes more.</td>
+    </tr>
+    <tr>
+      <td> - 1 large egg</td>
+      <td>7. Serve warm with maple syrup, strawberry and banana toppings.</td>
+    </tr>
+    <tr>
+      <td> - 1 tsp vanilla essence</td>
+      <td>Note: You can also add other assorted toppings, such as butter, confectioners sugar, honey, jams, preserves, sweetened whipped cream, or chocolate syrup.</td>
+    </tr>
+    <tr>
+      <td> - 1 tablespoon vegetable oil</td>
+    </tr>
+    <tr>
+      <td> - 1 cup sliced bananas and strawberries</td>
+    </tr>
+    <tr>
+      <td> - 1 cup maple syrup</td>
+    </tr>
+  </table>
 
 </body>
 </html>
