--- a/index.html
+++ b/index.html
@@ -10,25 +10,61 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chela+One&family=Fasthand&display=swap"
+      rel="stylesheet"
+    />
     <style>
+      body {
+        background-color: #8cc0de;
+      }
       .title-container {
         display: flex;
         justify-content: center;
         align-items: center;
         height: 240px;
-        background-color: #f8f9fa;
-        border: 1px solid #dee2e6;
+        background-color: #faf0d7;
+        border: 3px solid #4d4d4d;
         border-radius: 15px;
         margin-top: 50px;
       }
+      .title-container h1 {
+        font-family: "Chela One", cursive;
+        font-size: 118px; /* Adjust the font size as needed */
+        color: #f4bfbf;
+        text-shadow: -2px -2px 0 #4d4d4d, 2px -2px 0 #4d4d4d, -2px 2px 0 #4d4d4d,
+          2px 2px 0 #4d4d4d;
+      }
       .button-container {
-      display: flex;
-      justify-content: center;
-      margin-top: 20px;
-    }
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+      }
       .button-container .btn {
-      width: 33.33%;
-    }
+        font-family: "Chela One", cursive;
+        font-size: 30px;
+        flex-basis: 30%;
+        color: #faf0d7;
+        text-shadow: -2px -2px 0 #4d4d4d, 2px -2px 0 #4d4d4d, -2px 2px 0 #4d4d4d,
+          2px 2px 0 #4d4d4d;
+        background-color: #f4bfbf;
+        border: 3px solid #4d4d4d;
+        border-radius: 10px;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+      .button-container:hover {
+        color: #faf0d7;
+        text-shadow: -2px -2px 0 #4d4d4d, 2px -2px 0 #4d4d4d, -2px 2px 0 #4d4d4d,
+          2px 2px 0 #4d4d4d;
+        border-radius: 10px;
+        text-decoration: underline;
+      }
     </style>
   </head>
   <body>
@@ -41,7 +77,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 offset-md-3">
+        <div class="col-md-12">
           <div class="button-container">
             <a href="recipe_select.html" class="btn btn-primary">Recipes</a>
           </div>
