--- a/recipe_select.html
+++ b/recipe_select.html
@@ -6,14 +6,24 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chela+One&family=Fasthand&display=swap"
+      rel="stylesheet"
+    />
     <style>
+      body {
+        background-color: #8cc0de;
+      }
       .title-container {
         display: flex;
         justify-content: center;
         align-items: center;
         height: 100px;
-        background-color: #f8f9fa;
-        border: 1px solid #dee2e6;
+        background-color: #faf0d7;
+        border: 3px solid #4d4d4d;
         border-radius: 10px;
         margin-bottom: 20px;
         margin-top: 50px;
@@ -26,9 +36,14 @@
       }
 
       .level-container .level {
+        font-family: "Chela One", cursive;
+        font-size: 30px;
         flex-basis: 30%;
-        background-color: #f8f9fa;
-        border: 1px solid #dee2e6;
+        color: #faf0d7;
+        text-shadow: -2px -2px 0 #4d4d4d, 2px -2px 0 #4d4d4d, -2px 2px 0 #4d4d4d,
+          2px 2px 0 #4d4d4d;
+        background-color: #f4bfbf;
+        border: 3px solid #4d4d4d;
         border-radius: 10px;
         padding: 10px;
         display: flex;
@@ -36,9 +51,23 @@
         align-items: center;
         text-align: center;
       }
+
+      .level p {
+        font-size: 20px;
+        text-shadow: -1px -1px 0 #4d4d4d, 1px -1px 0 #4d4d4d, -1px 1px 0 #4d4d4d,
+          1px 1px 0 #4d4d4d;
+      }
       .level {
         color: black; /* Change the color to your desired value */
         text-decoration: none;
+      }
+
+      .title-container h1.text-center {
+        font-family: "Chela One", cursive;
+        font-size: 90px; /* Adjust the font size as needed */
+        color: #f4bfbf;
+        text-shadow: -2px -2px 0 #4d4d4d, 2px -2px 0 #4d4d4d, -2px 2px 0 #4d4d4d,
+          2px 2px 0 #4d4d4d;
       }
     </style>
   </head>
@@ -106,3 +135,5 @@
 <button>
 <a href= "recipes/pancakes/home.html"> pancakes </a>
 </button> -->
+
+
