basic images for recipe select page

--- a/recipe_select.html
+++ b/recipe_select.html
@@ -85,14 +85,17 @@
           <div class="level-container">
             <a href="recipes/alfredo/home.html" class="level">
               <h3>Chicken Alfredo</h3>
+              <img src="images/chicken.png" alt="Image Description" width="300" height="200">
               <p>recipe desc</p>
             </a>
             <a href="recipes/cheese/home.html" class="level">
               <h3>Grilled Cheese</h3>
+              <img src="images/cheese.png" alt="Image Description" width="300" height="200">
               <p>recipe desc</p>
             </a>
             <a href="recipes/squid/home.html" class="level">
-              <h3>Squid Tempura</h3>
+              <h3>Fried Calamari</h3>
+              <img src="images/Calamari.jpg" alt="Image Description" width="300" height="200">
               <p>recipe desc</p>
             </a>
           </div>
@@ -103,10 +106,12 @@
           <div class="level-container">
             <a href="recipes/pancakes/home.html" class="level">
               <h3>Pancakes</h3>
+              <img src="images/pancake.png" alt="Image Description" width="300" height="200">
               <p>recipe desc</p>
             </a>
             <a href="recipes/beef/home.html" class="level">
-              <h3>Beef</h3>
+              <h3>Beef Stir Fry</h3>
+              <img src="images/beef.png" alt="Image Description" width="300" height="200">
               <p>recipe desc</p>
             </a>
           </div>
