--- a/recipes/alfredo/home.html
+++ b/recipes/alfredo/home.html
@@ -27,7 +27,10 @@
       cursor: pointer;
       text-align: center;
     }
-
+    .block:hover{
+        background-color: #B2D3C2;
+        color: black;
+    }
     .highscores {
       float: right;
       margin-right: 20px;
@@ -36,9 +39,11 @@
 </head>
 
 <body>
-  <button class="block">
-    <a href="chop.html"> Start Cooking! </a>
-  </button>
+    <a href="chop.html">
+        <button class="block">
+            Start Cooking!
+        </button>
+    </a>
 
   <div class="highscores">
     <h2 align="right"> Highscores: </h2>
@@ -61,52 +66,57 @@
     </table>
   </div>
 
-  <h3>Pancake Recipe</h3>
+  <h3>Chicken Alfredo Fettucini Recipe</h3>
   <table>
     <tr>
       <td><strong>Ingredients</strong></td>
       <td><strong>Instructions</strong></td>
     </tr>
     <tr>
-      <td>1. 1 cup all-purpose flour, (spooned and leveled)</td>
-      <td>1. In a small bowl, whisk together flour, sugar, baking powder, and salt; set aside.</td>
+      <td>- 6 Garlic cloves ; peeled and smashed with a knife</td>
+      <td>1. Rub garlic over chicken; reserve garlic. Season chicken with salt and pepper and rub in seasonings with your hands; set aside.</td>
     </tr>
     <tr>
-      <td>2. 2 tablespoons sugar</td>
-      <td>2. In a medium bowl, whisk together milk, butter (or oil), and egg.</td>
+      <td>- 1 lb Boneless chicken breast ; washed, uncooked patted dry</td>
+      <td>2. Heat a large, heavy skillet over medium heat.
+</td>
     </tr>
     <tr>
-      <td>3. 2 teaspoons baking powder</td>
-      <td>3. Add dry ingredients to milk mixture; whisk until just moistened (do not overmix; a few small lumps are fine).</td>
+      <td>- 1 tspn Salt</td>
+      <td>3. Off heat, coat skillet with cooking spray and then set over medium-low heat. Sauté garlic until fragrant, about 1 minute. Add chicken and cook until golden, flipping once, about 5 minutes per side.</td>
     </tr>
     <tr>
-      <td>4. ½ teaspoon salt</td>
+      <td>- 1 tspn Pepper</td>
       <td>4. Heat a large skillet (nonstick or cast-iron) or griddle over medium. Add ½ tsp of butter.</td>
     </tr>
     <tr>
-      <td>5. 1 cup milk</td>
-      <td>5. For each pancake, spoon 2 to 3 tablespoons of batter onto skillet, using the back of the spoon to spread batter into a round.</td>
+      <td>- Spray Cooking Spray</td>
+      <td>- Off heat, coat skillet with cooking spray and then set over medium-low heat. Sauté garlic until fragrant, about 1 minute. Add chicken and cook until golden, flipping once, about 5 minutes per side.</td>
     </tr>
     <tr>
-      <td>6. 2 tablespoons unsalted butter, melted, or vegetable oil</td>
-      <td>6. Cook until surface of pancakes have some bubbles and a few have burst, 1 to 2 minutes. Flip carefully with a thin spatula, and cook until browned on the underside, 1 to 2 minutes more.</td>
+      <td>- 1/2 cup Canned Chicken Broth</td>
+      <td>6. Meanwhile, in a small bowl, combine broth, heavy cream and yogurt; pour over chicken and scrape bottom of skillet with a wooden spoon to incorporate seasonings. Simmer chicken gently, turning once, about 30 minutes.</td>
     </tr>
     <tr>
-      <td>7. 1 large egg</td>
-      <td>7. Serve warm with maple syrup, strawberry and banana toppings.</td>
+      <td>- 1/4 cup Heavy whipping cream</td>
+      <td>7. While chicken is cooking, bring a medium pot of salted water to a boil. Cook pasta according to package directions; drain.</td>
     </tr>
     <tr>
-      <td>8. 1 tsp vanilla essence</td>
-      <td>Note: You can also add other assorted toppings, such as butter, confectioners sugar, honey, jams, preserves, sweetened whipped cream, or chocolate syrup.</td>
+      <td>- 1/4 cup whole milk plain yogurt</td>
+      <td>8. Remove chicken from cream sauce and set aside. Add Parmesan cheese to cream sauce and mix until well-combined. Add cooked pasta and 3 tablespoons of parsley; toss well. Serve pasta topped which chicken and rest of parsley. Yields about 3 ounces of chicken and 2/3 cup of pasta/sauce per serving.</td>
     </tr>
     <tr>
-      <td>9. 1 tablespoon vegetable oil</td>
+      <td>- 1/8 tspn table salt ; for cooking pasta</td>
+      <td>9. Notes: For a hint of spice, you can add 1/4 teaspoon of freshly grated nutmeg to the sauce. You can also use basil instead of parsley.
     </tr>
     <tr>
-      <td>10. 1 cup sliced bananas and strawberries</td>
+      <td>- 8 oz Whole wheat pasta fettuccini</td>
     </tr>
     <tr>
-      <td>11. 1 cup maple syrup</td>
+      <td>- 1/2 cup Pramesan cheese ; Suggested Parmigiano-Reggiano</td>
+    </tr>
+        <tr>
+      <td>- 1/4 cup Fresh parsley chopped</td>
     </tr>
   </table>
 
