--- a/recipes/pancakes/home.html
+++ b/recipes/pancakes/home.html
@@ -27,7 +27,10 @@
       cursor: pointer;
       text-align: center;
     }
-
+      .block:hover{
+        background-color: #B2D3C2;
+        color: black;
+    }
     .highscores {
       float: right;
       margin-right: 20px;
