new changes to recipe

--- a/recipes/alfredo/home.html
+++ b/recipes/alfredo/home.html
@@ -35,6 +35,10 @@
       float: right;
       margin-right: 20px;
     }
+    .gone {
+      background-color: #8CC0DE;
+      border: 0px
+    }
   </style>
 </head>
 
@@ -66,7 +70,8 @@
     </table>
   </div>
 
-  <h3>Chicken Alfredo Fettucini Recipe</h3>
+ 
+  <h2 align="center">Chicken Alfredo Fettucini Recipe</h2>
   <table>
     <tr>
       <td><strong>Ingredients</strong></td>
@@ -91,7 +96,7 @@
     </tr>
     <tr>
       <td>- Spray Cooking Spray</td>
-      <td>- Off heat, coat skillet with cooking spray and then set over medium-low heat. Sauté garlic until fragrant, about 1 minute. Add chicken and cook until golden, flipping once, about 5 minutes per side.</td>
+      <td>5 Off heat, coat skillet with cooking spray and then set over medium-low heat. Sauté garlic until fragrant, about 1 minute. Add chicken and cook until golden, flipping once, about 5 minutes per side.</td>
     </tr>
     <tr>
       <td>- 1/2 cup Canned Chicken Broth</td>
@@ -103,14 +108,15 @@
     </tr>
     <tr>
       <td>- 1/4 cup whole milk plain yogurt</td>
-      <td>8. Remove chicken from cream sauce and set aside. Add Parmesan cheese to cream sauce and mix until well-combined. Add cooked pasta and 3 tablespoons of parsley; toss well. Serve pasta topped which chicken and rest of parsley. Yields about 3 ounces of chicken and 2/3 cup of pasta/sauce per serving.</td>
+      <td>8. Remove chicken from cream sauce and set aside. Add Parmesan cheese to cream sauce and mix until well-combined. </td>
     </tr>
     <tr>
       <td>- 1/8 tspn table salt ; for cooking pasta</td>
-      <td>9. Notes: For a hint of spice, you can add 1/4 teaspoon of freshly grated nutmeg to the sauce. You can also use basil instead of parsley.
+      <td>9. Add cooked pasta and 3 tablespoons of parsley; toss well. Serve pasta topped which chicken and rest of parsley. Yields about 3 ounces of chicken and 2/3 cup of pasta/sauce per serving.</td>
     </tr>
     <tr>
       <td>- 8 oz Whole wheat pasta fettuccini</td>
+      <td>10. Notes: For a hint of spice, you can add 1/4 teaspoon of freshly grated nutmeg to the sauce. You can also use basil instead of parsley.</td>
     </tr>
     <tr>
       <td>- 1/2 cup Pramesan cheese ; Suggested Parmigiano-Reggiano</td>
