--- a/recipes/beef/home.html
+++ b/recipes/beef/home.html
@@ -35,6 +35,10 @@
       float: right;
       margin-right: 20px;
     }
+    .gone {
+      background-color: #8CC0DE;
+      border: 0px
+    }
   </style>
 </head>
 
@@ -66,7 +70,7 @@
     </table>
   </div>
 
-  <h3>Beef Stir Fry Veggies</h3>
+  <h2 align="center">Beef Stir Fry Veggies</h2>
   <table>
     <tr>
       <td><strong>Ingredients</strong></td>
@@ -100,29 +104,32 @@
     </tr>
     <tr>
       <td>- 2 teaspoons sugar</td>
-      <td>7. Add the remaining 1/2 tablespoon oil and ginger into the same wok. Turn back to medium high heat (high heat on an electric stove). Stir a few times until fragrant. Add onion. Stir and cook until soft, about 1 minute. Add bell pepper and stir and cook for 30 seconds, until it’s half cooked through. Add beef back into wok. Mix the sauce again and pour it over top of the beef and vegetables. Immediately stir to mix everything well for a minute, until the beef is cooked through (although I like to leave the beef a bit rare, so it will have a super soft texture). Turn off heat and immediately transfer everything to a plate. </td>
-    </tr>
+      <td>7. Add the remaining 1/2 tablespoon oil and ginger into the same wok. Turn back to medium high heat (high heat on an electric stove). Stir a few times until fragrant. Add onion. Stir and cook until soft, about 1 minute. Add bell pepper and stir and cook for 30 seconds, until it’s half cooked through.</td>
     <tr>
       <td>- 1 tablespoon water</td>
-      <td>8. Serve warm over steamed white rice as a main dish. </td>
+      <td>8. Add beef back into wok. Mix the sauce again and pour it over top of the beef and vegetables. Immediately stir to mix everything well for a minute, until the beef is cooked through (although I like to leave the beef a bit rare, so it will have a super soft texture). </td>
+    </tr> 
     </tr>
     <tr>
       <td>- 1 and 1/2 tablespoons peanut oil (or vegetable oil)</td>
-      <td>9. Notes:The dark soy sauce will add a nice color to the beef. You could use light soy sauce instead, but the finished beef will be pale brown in color.</td>
-
+      <td>9.Turn off heat and immediately transfer everything to a plate.</td>
     </tr>
     <tr>
       <td>- 1 teaspoon minced ginger</td>
+      <td>10. Serve warm over steamed white rice as a main dish.</td>
     </tr>
     <tr>
       <td>- (140 grams) onion, chopped</td>
+      <td>11. Notes:The dark soy sauce will add a nice color to the beef. You could use light soy sauce instead, but the finished beef will be pale brown in color.</td>
     </tr>
         <tr>
       <td>- 1 (300 grams) cup chopped bell pepper</td>
+    
     </tr>
     </tr>
         <tr>
       <td>- steamed white rice</td>
+  
     </tr>
   </table>
 
