--- a/recipes/pancakes/home.html
+++ b/recipes/pancakes/home.html
@@ -35,6 +35,10 @@
       float: right;
       margin-right: 20px;
     }
+    .gone {
+      background-color: #8CC0DE;
+      border: 0px
+    }
   </style>
 </head>
 
