--- a/recipes/cheese/home.html
+++ b/recipes/cheese/home.html
@@ -35,6 +35,10 @@
       float: right;
       margin-right: 20px;
     }
+    .gone {
+      background-color: #8CC0DE;
+      border: 0px
+    }
   </style>
 </head>
 
@@ -67,15 +71,15 @@
     </table>
   </div>
 
-  <h3>Grilled Cheese Sandwich</h3>
-  <table>
+ <h2 align="center">Grilled Cheese Sandwich</h2>
+  <table align= "center">
     <tr>
       <td><strong>Ingredients</strong></td>
       <td><strong>Instructions</strong></td>
     </tr>
     <tr>
       <td>- tbsp butter, softened</td>
-      <td>Put cheese slices on one slice of bread then put the other slice on top</td>
+      <td>1. Put cheese slices on one slice of bread then put the other slice on top</td>
     </tr>
     <tr>
       <td>- 2 slices soft white bread</td>
