started adding in Flask and ground work for highscore database

--- a/recipes/squid/home.html
+++ b/recipes/squid/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title> Byte Buffet: Fried Calamari </title>
   <style>
     body {
       background-color: #8CC0DE;
